# blog

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  _redirects  netlify.toml  pyproject.toml
.github/workflows/: actions.yaml
content/posts/0-zeroless/: index.md
content/posts/1-personal-readme/: index.md
content/posts/10-a-treatise-on-brag-docs-part-1/: index.md
content/posts/11-a-treatise-on-brag-docs-part-2/: index.md
content/posts/12-on-deserving/: index.md
content/posts/13-the-most-insidious-career-mistake/: index.md
content/posts/14-choose-to-score-b/: index.md
content/posts/15-what-is-really-proactivity-and-when-it-matters/: index.md
content/posts/16-the-filthy-codebase/: index.md
content/posts/2-how-can-i-help-you/: index.md
content/posts/3-deep-thinking-time/: index.md
content/posts/4-narrative-matters/: index.md
content/posts/5-i-used-to-hate-1on1s/: index.md
content/posts/6-career-fears/: index.md
content/posts/7-being-an-engineer-makes-me-tick/: index.md
content/posts/8-advice-to-those-onboarding/: index.md
content/posts/9-the-low-hanging-fruits-of-technical-writing/: index.md
public/static/css/: main.css
public/static/js/: minisearch.js  serviceworker.js
src/: app.py  caching.py  data.py  generate_static.py  main.py  models.py
src/images/: base.py  social_media.py
src/routes/: categories.py  feeds.py  index.py  posts.py  tags.py
src/settings/: dev.py  prod.py
src/utils/: base.py  env.py  items.py  templates.py
src/x8lucas8x_blog/: app.py  caching.py  data.py  generate_static.py  main.py
src/x8lucas8x_blog/images/: base.py
src/x8lucas8x_blog/routes/: categories.py  feeds.py  index.py  posts.py  tags.py
src/x8lucas8x_blog/settings/: prod.py
src/x8lucas8x_blog/utils/: env.py  templates.py
templates/: 404.html.jinja  archives.html.jinja  article.html.jinja  article_share.html.jinja  base.html.jinja  directories.html.jinja  directory.html.jinja  feed.atom.jinja  feed.rss.jinja  index.html.jinja  menu.html.jinja  page.html.jinja  pagination.html.jinja  period_archives.html.jinja  robots.txt.jinja  search.html.jinja  sitemap.xml.jinja
templates/macros/: article.html.jinja  bio.html.jinja  translations.html.jinja
