[project]
name = "x8lucas8x-blog"
version = "0.1.0"
description = "Lucas Lira Gomes' personal blog."
readme = "README.md"
authors = [
  {name = "Lucas Lira Gomes", email = "contact@x8lucas8x.com"}
]
maintainers = [
  {name = "Lucas Lira Gomes", email = "contact@x8lucas8x.com"}
]
keywords = ["blog"]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "markupsafe>=3.0.2",
    "minify-html>=0.16.4",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
    "starlette>=0.46.1",
    "typer>=0.15.2",
    "uvicorn[standard]>=0.34.0",
    "wand>=0.6.13",
]

[project.urls]
Homepage = "https://x8lucas8x.com"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "scalene>=1.5.51",
]

[tool.ruff]
exclude = [".pdbrc"]
extend-exclude = ["*project_name*"]
force-exclude = true
indent-width = 4
line-length = 90
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
